Cambios requerimientos correos 24 de Julio y 5 de Agosto

--- a/web/templates/carrera/footer.html
+++ b/web/templates/carrera/footer.html
@@ -16,15 +16,18 @@
                             Odontología de la Universidad de La Serena, Avenida Juan Cisternas #1015<br> 
                             (51) 2 334952 - Carrera | (51) 2 334966 - Clínica<br>
                             &copy; <span id="copyright-year"></span> Derechos reservados<br>
-                            Desarrollado por <a href="http://userena.digital" class="text-gray">Campus Digital</a>
+                            <!-- Desarrollado por <a href="http://userena.digital" class="text-gray">Campus Digital</a> -->
                         </p>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://twitter.com/OdontologiaULS/" target="_blank" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light-2"></a>
+                                <a href="https://www.instagram.com/odontouserena/" target="_blank" class="icon fa fa-instagram icon-xxs icon-circle icon-gray-light-2"></a>
                             </li>
-                            <!-- <li>
-                                <a href="https://www.instagram.com/odontologiauls/" target="_blank" class="icon fa fa-instagram icon-xxs icon-circle icon-gray-light-2"></a>
-                            </li> -->
+                            <li>
+                                <a href="https://web.facebook.com/odontoULS/" target="_blank" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light-2"></a>
+                            </li>
+                            <li>
+                                <a href="https://x.com/Odontouserena" target="_blank" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light-2"></a>
+                            </li>
                         </ul>
                     </div>
                     <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-3">
