--- a/web/templates/clinica/equipo.html
+++ b/web/templates/clinica/equipo.html
@@ -144,7 +144,7 @@
                                             {% endif %}
                                             {% if enfermeras %}
                                             <div data-filter="Enfermeras" class="col-md-12 isotope-item">
-                                                <h3>Enfermeras coordinadoras</h3>
+                                                <h3>Enfermeras</h3>
                                                 <hr class="divider divider-lg hr-sm-left-2 bg-primary">
                                                 <div class="offset-top-41 offset-lg-top-60">
                                                     <div class="range range-xs-left">
