--- a/web/templates/noticia/noticia.html
+++ b/web/templates/noticia/noticia.html
@@ -24,10 +24,10 @@
                       <h4 class="text-bold text-primary">{{ noticia.titulo }}</h4>
                       <ul class="list list-inline list-inline-dashed offset-top-4">
                         <li>{{ noticia.inicio|date:"d M Y, H:i" }} hrs</li>
-                        <li>{{ noticia.cierre|date:"d M Y, H:i" }} hrs</li>
+                        <!-- <li>{  { noticia.cierre|date:"d M Y, H:i" }  } hrs</li> -->
                       </ul>
                       <div class="offset-top-30"><img src="{{ noticia.imagen.url }}" width="770" height="480" alt="" class="img-responsive center-block"></div>
-                      <div class="offset-top-30">
+                      <div class="offset-top-30" style="text-align: justify;">
                           {{ noticia.descripcion|safe }}
                       </div>
                     </div>
