--- a/web/templates/noticia/noticias.html
+++ b/web/templates/noticia/noticias.html
@@ -33,14 +33,14 @@
                             <section class="post-content text-left">
                               <!-- Post Title-->
                               <div class="post-title offset-top-8">
-                                <h4 class="text-bold"><a href="{% url 'detalle' actid=noticia.id %}">{{ noticia.titulo }}</a></h4>
+                                <h4 class="text-bold" style="text-align: justify;"><a href="{% url 'detalle' actid=noticia.id %}">{{ noticia.titulo }}</a></h4>
                               </div>
                               <ul class="list-inline list-inline-dashed">
                                 <li>{{ noticia.inicio|date:"d M Y, H:i" }} hrs</li>
-                                <li>{{ noticia.cierre|date:"d M Y, H:i" }} hrs</li>
+                                <!-- <li>{{ noticia.cierre|date:"d M Y, H:i" }} hrs</li> -->
                               </ul>
                               <!-- Post Body-->
-                              <div class="post-body">
+                              <div class="post-body" style="text-align: justify;">
                                 {{ noticia.descripcion|truncatechars:200|safe }}
                               </div>
                               <!--
