Se actualiza color de fondo footer del sitio

--- a/web/templates/carrera/footer.html
+++ b/web/templates/carrera/footer.html
@@ -12,7 +12,7 @@
                         </div>
                     </div>
                     <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-2">
-                        <p class="text-gray">
+                        <p class="text-white">
                             Odontología de la Universidad de La Serena, Avenida Juan Cisternas #1015<br> 
                             (51) 2 334952 - Carrera | (51) 2 334966 - Clínica<br>
                             &copy; <span id="copyright-year"></span> Derechos reservados<br>
