--- a/template/site/css/custom.css
+++ b/template/site/css/custom.css
@@ -1,7 +1,9 @@
 @charset "UTF-8";
 
 footer#footer-principal {
-    background-color: #696969;
+    /* background-color: #696969; 
+    background-color: #214e83;*/
+    background-color: #08184E;
     margin-top: 50px;
 }
 
