--- a/web/assets/css/custom.css
+++ b/web/assets/css/custom.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 
 footer#footer-principal {
-    background-color: #696969;
+    /* background-color: #696969; */
+    background-color: #08184E;
     margin-top: 50px;
 }
 
